--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!--хедер-->
 
-  <header class="header">
+  <!-- <header class="header">
     <div class="header__container container">
       <nav class="header__nav">
         <a href="./index.html" class="logo link">Web<span class="logo--accent-black">Studio</span></a>
@@ -44,11 +44,11 @@
         </li>
       </ul>
     </div>
-  </header>
+  </header> -->
   <main>
     <!-- Герой -->
 
-    <section class="hero overlay">
+    <!-- <section class="hero overlay">
       <div class="container">
         <h1 class="hero__text">
           Эффективные решения для <br />
@@ -58,9 +58,11 @@
           Заказать услугу
         </button>
       </div>
-    </section>
+    </section> -->
+
     <!-- особеннности -->
-    <section class="section">
+
+    <!-- <section class="section">
       <div class="container">
         <h2 class="hidden">особенности</h2>
         <ul class="card-set-list list">
@@ -114,11 +116,11 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!--Чем мы занимаемся -->
 
-    <section class="section work">
+    <!-- <section class="section work">
       <div class="container">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="card-set-list list">
@@ -136,16 +138,16 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <!--Наша команда-->
+    <!--Наша команда -->
 
-    <section class="team section">
+    <!-- <section class="team section">
       <div class="container">
         <h2 class="section-title">Наша команда</h2>
         <ul class="card-set-list list">
           <li class="team-item">
-            <img class="img" src="./images/stydea/egor.jpg" alt="Игорь Демьяненко" width="270" />
+            <img class="img" src="./images/stydea/egor.jpg" alt="Игорь Демьяненко" />
             <h3 class="master">Игорь Демьяненко</h3>
             <p lang="en" class="desc">Product Designer</p>
             <ul class="team-join list">
@@ -172,7 +174,7 @@
             </ul>
           </li>
           <li class="team-item">
-            <img class="img" src="./images/stydea/olga.jpg" alt="Ольга Репина" width="270" />
+            <img class="img" src="./images/stydea/olga.jpg" alt="Ольга Репина" />
             <h3 class="master">Ольга Репина</h3>
             <p lang="en" class="desc">Frontend Developer</p>
             <ul class="team-join list">
@@ -199,7 +201,7 @@
             </ul>
           </li>
           <li class="team-item">
-            <img class="img" src="./images/stydea/nikolay.jpg" alt="Николай Тарасов" width="270" />
+            <img class="img" src="./images/stydea/nikolay.jpg" alt="Николай Тарасов" />
             <h3 class="master">Николай Тарасов</h3>
             <p lang="en" class="desc">Marketing</p>
             <ul class="team-join list">
@@ -226,7 +228,7 @@
             </ul>
           </li>
           <li class="team-item">
-            <img class="img" src="./images/stydea/mehael.jpg" alt="Михаил Ермаков" width="270" />
+            <img class="img" src="./images/stydea/mehael.jpg" alt="Михаил Ермаков" />
             <h3 class="master">Михаил Ермаков</h3>
             <p lang="en" class="desc">UI Designer</p>
             <ul class="team-join list">
@@ -254,7 +256,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!--постоянные клиенты-->
 
@@ -303,7 +305,7 @@
 
   <!--футер-->
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container">
       <div class="footer-box">
         <a href="./index.html" class="logo link">Web<span class="logo--accent-white">Studio</span></a>
@@ -356,9 +358,9 @@
         </form>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
-  <div data-modal class="backdrop is-hidden">
+  <!-- <div data-modal class="backdrop is-hidden">
     <div class="modal">
       <button data-modal-close type="button" class="backdrop-close">
         <svg class="backdrop-svg">
@@ -407,7 +409,7 @@
     </div>
   </div>
 
-  <script src="./js/modal.js"></script>
+  <script src="./js/modal.js"></script> -->
 </body>
 
 </html>
