робота не закончена

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <main>
     <!-- Герой -->
 
-    <!-- <section class="hero overlay">
+    <section class="hero overlay">
       <div class="container">
         <h1 class="hero__text">
           Эффективные решения для <br />
@@ -58,11 +58,11 @@
           Заказать услугу
         </button>
       </div>
-    </section> -->
+    </section>
 
     <!-- особеннности -->
 
-    <!-- <section class="section">
+    <section class="section">
       <div class="container">
         <h2 class="hidden">особенности</h2>
         <ul class="card-set-list list">
@@ -116,11 +116,11 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!--Чем мы занимаемся -->
 
-    <!-- <section class="section work">
+    <section class="section work">
       <div class="container">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="card-set-list list">
@@ -138,11 +138,11 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!--Наша команда -->
 
-    <!-- <section class="team section">
+    <section class="team section">
       <div class="container">
         <h2 class="section-title">Наша команда</h2>
         <ul class="card-set-list list">
@@ -256,13 +256,13 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!--постоянные клиенты-->
 
     <section class="container section">
       <h2 class="section-title">Постоянные клиенты</h2>
-      <ul class="list clients">
+      <ul class="list clients card-set-list">
         <li class="item">
           <a href="" target="blank" rel="noopener noreferrer" class="link clients-svg-bg">
             <svg class="clients-icon">
