--- a/portfolio.html
+++ b/portfolio.html
@@ -206,6 +206,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-box">
+
                 <a href="./index.html" class="logo link">Web<span class="logo--accent-white">Studio</span></a>
                 <address class="address">
                     <ul class="footer-contact list">
@@ -252,7 +253,7 @@
             </div>
             <div class="footer-box">
                 <h2 class="footer-text">Подпишитесь на рассылку</h2>
-                <form action="#">
+                <form action="#" class="form-center">
                     <input type="text" class="footer-input" name="footer-input" placeholder="E-mail">
                     <button type="submit" class="footer-button">Подписаться <svg class="footer-icon-send">
                             <use href="./images/icons.svg/symbol-defs.svg#icon-send"></use>
