--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!--хедер-->
 
-  <!-- <header class="header">
+  <header class="header">
     <div class="header__container container">
       <nav class="header__nav">
         <a href="./index.html" class="logo link">Web<span class="logo--accent-black">Studio</span></a>
@@ -44,7 +44,7 @@
         </li>
       </ul>
     </div>
-  </header> -->
+  </header>
   <main>
     <!-- Герой -->
 
@@ -305,9 +305,10 @@
 
   <!--футер-->
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="footer-box">
+
         <a href="./index.html" class="logo link">Web<span class="logo--accent-white">Studio</span></a>
         <address class="address">
           <ul class="footer-contact list">
@@ -328,29 +329,33 @@
         <ul class="team-join list team-join-footer">
           <li class="team-join-list">
             <a href="" target="blank" class="link link-footer"><svg class="team-svg">
-                <use href="./images/icons.svg/symbol-defs.svg#icon-instagram" width="20" height="20"> </use>
+                <use href="./images/icons.svg/symbol-defs.svg#icon-instagram" width="20" height="20">
+                </use>
               </svg></a>
           </li>
           <li class="team-join-list">
             <a href="" target="blank" class="link link-footer"><svg class="team-svg">
-                <use href="./images/icons.svg/symbol-defs.svg#icon-twitter" width="20" height="20"> </use>
+                <use href="./images/icons.svg/symbol-defs.svg#icon-twitter" width="20" height="20">
+                </use>
               </svg></a>
           </li>
           <li class="team-join-list">
             <a href="" target="blank" class="link link-footer"><svg class="team-svg">
-                <use href="./images/icons.svg/symbol-defs.svg#icon-facebook" width="20" height="20"> </use>
+                <use href="./images/icons.svg/symbol-defs.svg#icon-facebook" width="20" height="20">
+                </use>
               </svg></a>
           </li>
           <li class="team-join-list">
             <a href="" target="blank" class="link link-footer"><svg class="team-svg">
-                <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin" width="20" height="20"> </use>
+                <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin" width="20" height="20">
+                </use>
               </svg></a>
           </li>
         </ul>
       </div>
       <div class="footer-box">
         <h2 class="footer-text">Подпишитесь на рассылку</h2>
-        <form action="#">
+        <form action="#" class="form-center">
           <input type="text" class="footer-input" name="footer-input" placeholder="E-mail">
           <button type="submit" class="footer-button">Подписаться <svg class="footer-icon-send">
               <use href="./images/icons.svg/symbol-defs.svg#icon-send"></use>
@@ -358,9 +363,9 @@
         </form>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
-  <!-- <div data-modal class="backdrop is-hidden">
+  <div data-modal class="backdrop is-hidden">
     <div class="modal">
       <button data-modal-close type="button" class="backdrop-close">
         <svg class="backdrop-svg">
@@ -409,7 +414,7 @@
     </div>
   </div>
 
-  <script src="./js/modal.js"></script> -->
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
