доделал футер + начал хедер

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li class="item"><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contact list">
+      <ul class="list contact ">
         <li class="item">
           <a href="mailto:info@example.com" class="link"><svg class="contact__envelope">
               <use href="./images/icons.svg/symbol-defs.svg#icon-envelope-1"></use>
