--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,12 @@
         <div class="header__container container">
             <nav class="header__nav">
                 <a href="./index.html" class="logo link">Web<span class="logo--accent-black">Studio</span></a>
-                <ul class="site-nav list">
+                <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg width="40" height="40">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-menu_40px"></use>
+                    </svg>
+                </button>
+                <ul class=" site-nav list">
                     <li class="item">
                         <a href="./index.html" class="link">Студия</a>
                     </li>
@@ -30,7 +35,7 @@
                     <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="contact list">
+            <ul class="list contact ">
                 <li class="item">
                     <a href="mailto:info@example.com" class="link"><svg class="contact__envelope">
                             <use href="./images/icons.svg/symbol-defs.svg#icon-envelope-1"></use>
@@ -262,6 +267,28 @@
             </div>
         </div>
     </footer>
+
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+            <svg width="40" height="40">
+                <use href="./images/icons.svg/symbol-defs.svg#icon-close_40px"> </use>
+            </svg>
+        </button>
+
+        <ul class="mobile-menu">
+            <li><a href="./index.html" class="link">Студия</a></li>
+            <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
+
+        </ul>
+    </div>
+
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
+
+
 </body>
 
 </html>
