--- a/index.html
+++ b/index.html
@@ -378,11 +378,23 @@
     </button>
 
     <ul class="mobile-menu">
-      <li><a href="./index.html" class="link current">Студия</a></li>
-      <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-      <li><a href="" class="link">Контакты</a></li>
-
+      <li class="link"><a href="./index.html" class="link current">Студия</a></li>
+      <li class="link"><a href="./portfolio.html" class="link">Портфолио</a></li>
+      <li class="link"><a href="" class="link">Контакты</a></li>
     </ul>
+
+    <ul class="mob-menu-contact">
+      <li class="mob-menu-contact-tel list"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+      <li class="mob-menu-contact-env list"><a href="mailto:info@example.com" class="link">info@devstudio.com</a></li>
+    </ul>
+
+    <ul class="mob-menu-social">
+      <li class="list"> <a href="" target="blank" rel="noopener noreferrer" class="link ">Instagram</a></li>
+      <li class="list"> <a href="" target="blank" rel="noopener noreferrer" class="link ">Twitter</a></li>
+      <li class="list"> <a href="" target="blank" rel="noopener noreferrer" class="link ">Facebook</a></li>
+      <li class="list"> <a href="" target="blank" rel="noopener noreferrer" class="link ">LinkedIn</a></li>
+    </ul>
+
   </div>
 
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
@@ -391,7 +403,7 @@
   <script defer src="js/mobile-menu.js"></script>
 
 
-  <!-- <div data-modal class="backdrop is-hidden">
+  <div data-modal class="backdrop is-hidden">
     <div class="modal">
       <button data-modal-close type="button" class="backdrop-close">
         <svg class="backdrop-svg">
@@ -441,6 +453,6 @@
   </div>
 
   <script src="./js/modal.js"></script>
-</body> -->
+</body>
 
 </html>
