добавил картинки в студию

--- a/index.html
+++ b/index.html
@@ -152,7 +152,19 @@
         <h2 class="section-title">Наша команда</h2>
         <ul class="card-set-list list">
           <li class="team-item">
-            <img class="img" src="./images/stydea/egor.jpg" alt="Игорь Демьяненко" />
+            <picture>
+              <source srcset="./images/stydea/egor/egor-1x.jpg 1x, 
+                          ./images/stydea/egor/egor-2x.jpg 2x" media="(min-width:1200px )">
+
+              <source srcset="./images/stydea/egor/egor-tab-1x.jpg 1x, 
+                          ./images/stydea/egor/egor-tab-2x.jpg 2x" media="(min-width:768px )">
+
+              <source srcset="./images/stydea/egor/egor-mob-1x.jpg 1x, 
+                                        ./images/stydea/egor/egor-mob-2x.jpg 2x" media="(min-width:460px )">
+
+              <img class="img" src="./images/stydea/egor/egor-1x.jpg" alt="Ольга Репина" />
+            </picture>
+
             <h3 class="master">Игорь Демьяненко</h3>
             <p lang="en" class="desc">Product Designer</p>
             <ul class="team-join list">
@@ -179,7 +191,21 @@
             </ul>
           </li>
           <li class="team-item">
-            <img class="img" src="./images/stydea/olga.jpg" alt="Ольга Репина" />
+
+            <picture>
+              <source srcset="./images/stydea/olga/olga-1x.jpg 1x, 
+              ./images/stydea/olga/olga-2x.jpg 2x" media="(min-width:1200px )">
+
+              <source srcset="./images/stydea/olga/olga-tab-1x.jpg 1x, 
+              ./images/stydea/olga/olga-tab-2x.jpg 2x" media="(min-width:768px )">
+
+              <source srcset="./images/stydea/olga/olga-mob-1x.jpg 1x, 
+                            ./images/stydea/olga/olga-mob-2x.jpg 2x" media="(min-width:460px )">
+
+              <img class="img" src="./images/stydea/olga/olga-1x.jpg" alt="Ольга Репина" />
+            </picture>
+
+
             <h3 class="master">Ольга Репина</h3>
             <p lang="en" class="desc">Frontend Developer</p>
             <ul class="team-join list">
@@ -206,7 +232,22 @@
             </ul>
           </li>
           <li class="team-item">
-            <img class="img" src="./images/stydea/nikolay.jpg" alt="Николай Тарасов" />
+
+            <picture>
+              <source srcset="./images/stydea/nikolay/nikolay-1x.jpg 1x, 
+              ./images/stydea/nikolay/nikolay-2x.jpg 2x" media="(min-width:1200px )">
+
+              <source srcset="./images/stydea/nikolay/nikolay-tab-1x.jpg 1x, 
+              ./images/stydea/nikolay/nikolay-tab-2x.jpg 2x" media="(min-width:768px )">
+
+              <source srcset="./images/stydea/nikolay/nikolay-mob-1x.jpg 1x, 
+                            ./images/stydea/nikolay/nikolay-mob-2x.jpg 2x" media="(min-width:460px )">
+
+              <img class="img" src="./images/stydea/nikolay/nikolay-1x.jpg" alt="Николай Тарасов" />
+            </picture>
+
+
+
             <h3 class="master">Николай Тарасов</h3>
             <p lang="en" class="desc">Marketing</p>
             <ul class="team-join list">
@@ -233,7 +274,22 @@
             </ul>
           </li>
           <li class="team-item">
-            <img class="img" src="./images/stydea/mehael.jpg" alt="Михаил Ермаков" />
+
+            <picture>
+              <source srcset="./images/stydea/mehael/mihael-1x.jpg 1x, 
+              ./images/stydea/mehael/mihael-2x.jpg 2x" media="(min-width:1200px )">
+
+              <source srcset="./images/stydea/mehael/mihael-tab-1x.jpg 1x, 
+              ./images/stydea/mehael/mihael-tab-2x.jpg 2x" media="(min-width:768px )">
+
+              <source srcset="./images/stydea/mehael/mihael-mob-1x.jpg 1x, 
+                            ./images/stydea/mehael/mihael-mob-2x.jpg 2x" media="(min-width:460px )">
+
+              <img class="img" src="./images/stydea/mehael/mihael-1x.jpg" alt="Михаил Ермаков" />
+            </picture>
+
+
+
             <h3 class="master">Михаил Ермаков</h3>
             <p lang="en" class="desc">UI Designer</p>
             <ul class="team-join list">
