--- a/portfolio.html
+++ b/portfolio.html
@@ -74,11 +74,23 @@
 
 
                 <h2 class="hidden">проекты</h2>
-                <ul class="card-set-list list">
+                <ul class="card-set-list card-set-list-clients list">
                     <li class="project-item">
                         <a class="link" href="">
                             <div class="project-wraper">
-                                <img src="./images/portfolio/img1.jpg" alt="пример веб-сайт" width="370" height="294">
+
+                                <picture>
+                                    <source srcset="./images/portfolio/img1.jpg 1x, 
+                                          ./images/portfolio/img1-2x.jpg 2x" media="(min-width:1200px )">
+                                    <source srcset="./images/portfolio/img1-tab-1x.jpg 1x, 
+                                         ./images/portfolio/img1-tab-2x.jpg 2x" media="(min-width:768px )">
+                                    <source srcset="./images/portfolio/img1-mob-1x.jpg 1x, 
+                                         ./images/portfolio/img1-mob-2x.jpg 2x" media="(min-width:460px )">
+                                    <img src="./images/portfolio/img1.jpg" alt="пример веб-сайт" width="370"
+                                        height="294">
+                                </picture>
+
+
                                 <p class="project-hover-text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
                                     защищённые сервера конкурентов.</p>
@@ -92,7 +104,17 @@
                     <li class="project-item">
                         <a class="link" href="">
                             <div class="project-wraper">
-                                <img src="./images/portfolio/img2.jpg" alt="пример дизайн" width="370" height="294">
+                                <picture>
+                                    <source srcset="./images/portfolio/img2.jpg 1x, 
+                                    ./images/portfolio/img2-2x.jpg 2x" media="(min-width:1200px )">
+                                    <source srcset="./images/portfolio/img2-tab-1x.jpg 1x, 
+                                     ./images/portfolio/img2-tab-2x.jpg 2x" media="(min-width:768px )">
+                                    <source srcset="./images/portfolio/img2-mob-1x.jpg 1x, 
+                                   ./images/portfolio/img2-mob-2x.jpg 2x" media="(min-width:460px )">
+                                    <img src="./images/portfolio/img2.jpg" alt="пример дизайн" width="370" height="294">
+                                </picture>
+
+
                                 <p class="project-hover-text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
                                     защищённые сервера конкурентов.</p>
@@ -106,7 +128,19 @@
                     <li class="project-item">
                         <a class="link" href="">
                             <div class="project-wraper">
-                                <img src="./images/portfolio/img3.jpg" alt="пример Приложение" width="370" height="294">
+
+                                <picture>
+                                    <source srcset="./images/portfolio/img3.jpg 1x, 
+                                    ./images/portfolio/img3-2x.jpg 2x" media="(min-width:1200px )">
+                                    <source srcset="./images/portfolio/img3-tab-1x.jpg 1x, 
+                                    ./images/portfolio/img3-tab-2x.jpg 2x" media="(min-width:768px )">
+                                    <source srcset="./images/portfolio/img3-mob-1x.jpg 1x, 
+                                        ./images/portfolio/img3-mob-2x.jpg 2x" media="(min-width:460px )">
+                                    <img src="./images/portfolio/img3.jpg" alt="пример Приложение" width="370"
+                                        height="294">
+                                </picture>
+
+
                                 <p class="project-hover-text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
                                     защищённые сервера конкурентов.</p>
@@ -120,7 +154,17 @@
                     <li class="project-item">
                         <a class="link" href="">
                             <div class="project-wraper">
-                                <img src="./images/portfolio/img4.jpg" alt="пример Маркетинг" width="370" height="294">
+
+                                <picture>
+                                    <source srcset="./images/portfolio/img4.jpg 1x, 
+                                    ./images/portfolio/img4-2x.jpg 2x" media="(min-width:1200px )">
+                                    <source srcset="./images/portfolio/img4-tab-1x.jpg 1x, 
+                                    ./images/portfolio/img4-tab-2x.jpg 2x" media="(min-width:768px )">
+                                    <source srcset="./images/portfolio/img4-mob-1x.jpg 1x, 
+                                        ./images/portfolio/img4-mob-2x.jpg 2x" media="(min-width:460px )">
+                                    <img src="./images/portfolio/img4.jpg" alt="пример Маркетинг" width="370"
+                                        height="294">
+                                </picture>
                                 <p class="project-hover-text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
                                     защищённые сервера конкурентов.</p>
@@ -134,7 +178,18 @@
                     <li class="project-item">
                         <a class="link" href="">
                             <div class="project-wraper">
-                                <img src="./images/portfolio/img5.jpg" alt="пример Приложение" width="370" height="294">
+                                <picture>
+                                    <source srcset="./images/portfolio/img5.jpg 1x, 
+                                    ./images/portfolio/img5-2x.jpg 2x" media="(min-width:1200px )">
+                                    <source srcset="./images/portfolio/img5-tab-1x.jpg 1x, 
+                                    ./images/portfolio/img5-tab-2x.jpg 2x" media="(min-width:768px )">
+                                    <source srcset="./images/portfolio/img5-mob-1x.jpg 1x, 
+                                        ./images/portfolio/img5-mob-2x.jpg 2x" media="(min-width:460px )">
+                                    <img src="./images/portfolio/img5.jpg" alt="пример Приложение" width="370"
+                                        height="294">
+                                </picture>
+
+
                                 <p class="project-hover-text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
                                     защищённые сервера конкурентов.</p>
@@ -148,7 +203,17 @@
                     <li class="project-item">
                         <a class="link" href="">
                             <div class="project-wraper">
-                                <img src="./images/portfolio/img6.jpg" alt="пример Веб-сайт" width="370" height="294">
+                                <picture>
+                                    <source srcset="./images/portfolio/img6.jpg 1x, 
+                                    ./images/portfolio/img6-2x.jpg 2x" media="(min-width:1200px )">
+                                    <source srcset="./images/portfolio/img6-tab-1x.jpg 1x, 
+                                    ./images/portfolio/img6-tab-2x.jpg 2x" media="(min-width:768px )">
+                                    <source srcset="./images/portfolio/img6-mob-1x.jpg 1x, 
+                                        ./images/portfolio/img6-mob-2x.jpg 2x" media="(min-width:460px )">
+                                    <img src="./images/portfolio/img6.jpg" alt="пример Веб-сайт" width="370"
+                                        height="294">
+                                </picture>
+
                                 <p class="project-hover-text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
                                     защищённые сервера конкурентов.</p>
@@ -162,7 +227,16 @@
                     <li class="project-item">
                         <a class="link" href="">
                             <div class="project-wraper">
-                                <img src="./images/portfolio/img7.jpg" alt="пример Дизайн" width="370" height="294">
+                                <picture>
+                                    <source srcset="./images/portfolio/img7.jpg 1x, 
+                                    ./images/portfolio/img7-2x.jpg 2x" media="(min-width:1200px )">
+                                    <source srcset="./images/portfolio/img7-tab-1x.jpg 1x, 
+                                    ./images/portfolio/img7-tab-2x.jpg 2x" media="(min-width:768px )">
+                                    <source srcset="./images/portfolio/img7-mob-1x.jpg 1x, 
+                                        ./images/portfolio/img7-mob-2x.jpg 2x" media="(min-width:460px )">
+                                    <img src="./images/portfolio/img7.jpg" alt="пример Дизайн" width="370" height="294">
+                                </picture>
+
                                 <p class="project-hover-text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
                                     защищённые сервера конкурентов.</p>
@@ -176,7 +250,17 @@
                     <li class="project-item">
                         <a class="link" href="">
                             <div class="project-wraper">
-                                <img src="./images/portfolio/img8.jpg" alt="пример Маркетинг" width="370" height="294">
+                                <picture>
+                                    <source srcset="./images/portfolio/img8.jpg 1x, 
+                                    ./images/portfolio/img8-2x.jpg 2x" media="(min-width:1200px )">
+                                    <source srcset="./images/portfolio/img8-tab-1x.jpg 1x, 
+                                    ./images/portfolio/img8-tab-2x.jpg 2x" media="(min-width:768px )">
+                                    <source srcset="./images/portfolio/img8-mob-1x.jpg 1x, 
+                                        ./images/portfolio/img8-mob-2x.jpg 2x" media="(min-width:460px )">
+                                    <img src="./images/portfolio/img8.jpg" alt="пример Маркетинг" width="370"
+                                        height="294">
+                                </picture>
+
                                 <p class="project-hover-text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
                                     защищённые сервера конкурентов.</p>
@@ -190,7 +274,17 @@
                     <li class="project-item">
                         <a class="link" href="">
                             <div class="project-wraper">
-                                <img src="./images/portfolio/img9.jpg" alt="пример Приложение" width="370" height="294">
+                                <picture>
+                                    <source srcset="./images/portfolio/img9.jpg 1x, 
+                                    ./images/portfolio/img9-2x.jpg 2x" media="(min-width:1200px )">
+                                    <source srcset="./images/portfolio/img9-tab-1x.jpg 1x, 
+                                    ./images/portfolio/img9-tab-2x.jpg 2x" media="(min-width:768px )">
+                                    <source srcset="./images/portfolio/img9-mob-1x.jpg 1x, 
+                                        ./images/portfolio/img9-mob-2x.jpg 2x" media="(min-width:460px )">
+                                    <img src="./images/portfolio/img9.jpg" alt="пример Приложение" width="370"
+                                        height="294">
+                                </picture>
+
                                 <p class="project-hover-text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на
                                     защищённые сервера конкурентов.</p>
