--- a/portfolio.html
+++ b/portfolio.html
@@ -369,19 +369,35 @@
             </svg>
         </button>
 
-        <ul class="mobile-menu">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
-
+        <ul class="mobile-menu list">
+            <li class="mobile-menu-item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="mobile-menu-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="mobile-menu-item"><a href="" class="link">Контакты</a></li>
         </ul>
+        <div>
+            <ul class="mob-menu-contact list">
+                <li class="mob-menu-contact-tel "><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="mob-menu-contact-env "><a href="mailto:info@example.com" class="link">info@devstudio.com</a>
+                </li>
+            </ul>
+
+            <ul class="mob-menu-social list">
+                <li class="mob-menu-social-item"> <a href="" target="blank" rel="noopener noreferrer"
+                        class="link ">Instagram</a></li>
+                <li class="mob-menu-social-item"> <a href="" target="blank" rel="noopener noreferrer"
+                        class="link ">Twitter</a></li>
+                <li class="mob-menu-social-item"> <a href="" target="blank" rel="noopener noreferrer"
+                        class="link ">Facebook</a></li>
+                <li class="mob-menu-social-item"> <a href="" target="blank" rel="noopener noreferrer"
+                        class="link ">LinkedIn</a></li>
+            </ul>
+        </div>
     </div>
 
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
         crossorigin="anonymous"></script>
     <script defer src="js/mobile-menu.js"></script>
-
 
 </body>
 
