--- a/index.html
+++ b/index.html
@@ -154,15 +154,16 @@
           <li class="team-item">
             <picture>
               <source srcset="./images/stydea/egor/egor-1x.jpg 1x, 
-                          ./images/stydea/egor/egor-2x.jpg 2x" media="(min-width:1200px )">
+                          ./images/stydea/egor/egor-2x.jpg 2x" media="(min-width:1200px )" type="image/jpg">
 
               <source srcset="./images/stydea/egor/egor-tab-1x.jpg 1x, 
-                          ./images/stydea/egor/egor-tab-2x.jpg 2x" media="(min-width:768px )">
+                          ./images/stydea/egor/egor-tab-2x.jpg 2x" media="(min-width:768px )" type="image/jpg">
 
               <source srcset="./images/stydea/egor/egor-mob-1x.jpg 1x, 
-                                        ./images/stydea/egor/egor-mob-2x.jpg 2x" media="(min-width:460px )">
+                                        ./images/stydea/egor/egor-mob-2x.jpg 2x" media="(min-width:460px )"
+                type="image/jpg">
 
-              <img class="img" src="./images/stydea/egor/egor-1x.jpg" alt="Ольга Репина" />
+              <img class="img" src="./images/stydea/egor/egor-1x.jpg" alt="Игорь Демьяненко" />
             </picture>
 
             <h3 class="master">Игорь Демьяненко</h3>
@@ -194,13 +195,13 @@
 
             <picture>
               <source srcset="./images/stydea/olga/olga-1x.jpg 1x, 
-              ./images/stydea/olga/olga-2x.jpg 2x" media="(min-width:1200px )">
+              ./images/stydea/olga/olga-2x.jpg 2x" media="(min-width:1200px )" type="image/jpg">
 
               <source srcset="./images/stydea/olga/olga-tab-1x.jpg 1x, 
-              ./images/stydea/olga/olga-tab-2x.jpg 2x" media="(min-width:768px )">
+              ./images/stydea/olga/olga-tab-2x.jpg 2x" media="(min-width:768px )" type="image/jpg">
 
               <source srcset="./images/stydea/olga/olga-mob-1x.jpg 1x, 
-                            ./images/stydea/olga/olga-mob-2x.jpg 2x" media="(min-width:460px )">
+                            ./images/stydea/olga/olga-mob-2x.jpg 2x" media="(min-width:460px )" type="image/jpg">
 
               <img class="img" src="./images/stydea/olga/olga-1x.jpg" alt="Ольга Репина" />
             </picture>
@@ -235,13 +236,13 @@
 
             <picture>
               <source srcset="./images/stydea/nikolay/nikolay-1x.jpg 1x, 
-              ./images/stydea/nikolay/nikolay-2x.jpg 2x" media="(min-width:1200px )">
+              ./images/stydea/nikolay/nikolay-2x.jpg 2x" media="(min-width:1200px )" type="image/jpg">
 
               <source srcset="./images/stydea/nikolay/nikolay-tab-1x.jpg 1x, 
-              ./images/stydea/nikolay/nikolay-tab-2x.jpg 2x" media="(min-width:768px )">
+              ./images/stydea/nikolay/nikolay-tab-2x.jpg 2x" media="(min-width:768px )" type="image/jpg">
 
               <source srcset="./images/stydea/nikolay/nikolay-mob-1x.jpg 1x, 
-                            ./images/stydea/nikolay/nikolay-mob-2x.jpg 2x" media="(min-width:460px )">
+                            ./images/stydea/nikolay/nikolay-mob-2x.jpg 2x" media="(min-width:460px )" type="image/jpg">
 
               <img class="img" src="./images/stydea/nikolay/nikolay-1x.jpg" alt="Николай Тарасов" />
             </picture>
@@ -277,13 +278,13 @@
 
             <picture>
               <source srcset="./images/stydea/mehael/mihael-1x.jpg 1x, 
-              ./images/stydea/mehael/mihael-2x.jpg 2x" media="(min-width:1200px )">
+              ./images/stydea/mehael/mihael-2x.jpg 2x" media="(min-width:1200px )" type="image/jpg">
 
               <source srcset="./images/stydea/mehael/mihael-tab-1x.jpg 1x, 
-              ./images/stydea/mehael/mihael-tab-2x.jpg 2x" media="(min-width:768px )">
+              ./images/stydea/mehael/mihael-tab-2x.jpg 2x" media="(min-width:768px )" type="image/jpg">
 
               <source srcset="./images/stydea/mehael/mihael-mob-1x.jpg 1x, 
-                            ./images/stydea/mehael/mihael-mob-2x.jpg 2x" media="(min-width:460px )">
+                            ./images/stydea/mehael/mihael-mob-2x.jpg 2x" media="(min-width:460px )" type="image/jpg">
 
               <img class="img" src="./images/stydea/mehael/mihael-1x.jpg" alt="Михаил Ермаков" />
             </picture>
@@ -503,10 +504,10 @@
         <label class="modal-label-checkbox">
           <input type="checkbox" name="checkbox" class="checkbox" required />
           <span class="checkbox-icon"></span>
-          <p class="modal-label-checkbox-text">
+          <span class="modal-label-checkbox-text">
             Соглашаюсь с рассылкой и принимаю
             <a href="" class="checkbox-accent">Условия договора</a>
-          </p>
+          </span>
         </label>
 
         <button type="submit" class="button-submit">Отправить</button>
