--- a/index.html
+++ b/index.html
@@ -371,7 +371,8 @@
     <div class="container">
       <div class="footer-box">
 
-        <a href="./index.html" class="logo link">Web<span class="logo--accent-white">Studio</span></a>
+        <span class="logo-footer">
+          <a href="./index.html" class="logo  link">Web<span class="logo--accent-white">Studio</span></a></span>
         <address class="address">
           <ul class="footer-contact list">
             <li class="item">
